posiGen_FullsendBox/src/objects/Energy_Audit__c.object
<CustomObject>
    <fields>
        <fullName>A1A__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attic 1 Area in S.F</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A1RV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attic 1 R-Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A2A__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attic 2 Area in S.F</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A2RV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attic 2 R-Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A3A__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attic 3 Area in S.F</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A3RV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attic 3 R-Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Project__r.Opportunity__r.Property_Address__c  &amp; &quot;, &quot; &amp;  Project__r.Opportunity__r.Property_City__c &amp; &quot;, &quot; &amp;  Project__r.Opportunity__r.Property_State__c &amp; &quot; &quot; &amp;  Project__r.Opportunity__r.Property_ZIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AirFilters_Points__c</fullName>
        <formula>5.25  *  AirFilters_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air Filters(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AirFilters_QTY__c</fullName>
        <label>Air Filters(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AirSealing_Notes__c</fullName>
        <label>Air Sealing Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Air_Attic_Scuttle_Hole_Insulation_EA_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attic Scuttle Hole Insulation EA(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Close_Chase_and_Fir_Downs_SF_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Close Chase and Fir Downs SF(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Electrical_Junction_Box_Cover_EA_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Electrical Junction Box Cover EA(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Fire_Rated_Sealing_LF_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fire Rated Sealing LF (QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Fireplace_Balloon_EA_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fireplace Balloon EA(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Fireplace_Chase_Sealing_SF_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fireplace Chase Sealing SF(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Is_air_sealing_needed__c</fullName>
        <label>Air sealing performed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Air_Recessed_Light_Box_EA_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recessed Light Box EA (QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Sealing_kWh_Savings__c</fullName>
        <formula>Case(TEXT(HVAC_S1_Heating_Type__c),
&quot;Central /gas&quot;,0.23,
&quot;Central/elect resist&quot;,0.93,
&quot;Central/heat pump&quot;,0.47,
&quot;Electric space&quot;,0.93, 
&quot;Gas space&quot;,0.23,
&quot;Room AC W/elec heat&quot;,0.93,
0)
* Blow_CFM_Reduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air Sealing kWh Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Sheetrock_Patch_SF_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sheetrock Patch SF(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Weatherstrip_Doors_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weatherstrip Doors(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Whole_House_Fan_Cover_EA_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Whole House Fan Cover EA(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_points__c</fullName>
        <formula>IF(ISPICKVAL( Air_Is_air_sealing_needed__c , &quot;Yes&quot;),550,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air sealing Performed?(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_sealing_Therms_Savings__c</fullName>
        <formula>CASE(TEXT(HVAC_S1_Heating_Type__c),
&quot;Central /gas&quot;,0.020, 
&quot;Central/elect resist&quot;,0, 
&quot;Central/heat pump&quot;,0, 
&quot;Electric space&quot;,0,
&quot;Gas space&quot;,0.020,
&quot;Room AC W/elec heat&quot;,0,
0)

* Blow_CFM_Reduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air sealing Therms Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appliances_Cloth_Dr_Esti_Eff__c</fullName>
        <description>This is a picklist field.</description>
        <label>Clothes Dryer Estimated Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appliances_Cloth_Was_Esti_Eff__c</fullName>
        <description>This is a picklist field.</description>
        <label>Clothes Washer Estimated Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appliances_Clothes_Dryer_Age__c</fullName>
        <description>This is a picklist field.</description>
        <label>Clothes Dryer Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appliances_Clothes_Dryer_Model__c</fullName>
        <description>This is a text field.</description>
        <label>Clothes Dryer Model #</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appliances_Clothes_Washer_Age__c</fullName>
        <description>This is a picklist field.</description>
        <label>Clothes Washer Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appliances_Clothes_Washer_Model__c</fullName>
        <description>This is a text field.</description>
        <label>Clothes Washer Model #</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appliances_De_Free_Esti_Eff__c</fullName>
        <description>This is a picklist field.</description>
        <label>Deep Freezer Estimated Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appliances_Deep_Freezer_Age__c</fullName>
        <description>This is a picklist field.</description>
        <label>Deep Freezer Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appliances_Deep_Freezer_Model__c</fullName>
        <description>This is a text field.</description>
        <label>Deep Freezer Model #</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appliances_Ref_Esti_Eff__c</fullName>
        <description>This is a picklist field.</description>
        <label>Refrigerator Estimated Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appliances_Refrigerator_Age__c</fullName>
        <description>This is a picklist field.</description>
        <label>Refrigerator  Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appliances_Refrigerator_Model__c</fullName>
        <description>This is a text field.</description>
        <label>Refrigerator Model #</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attic1_Insulation_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>Attic 1 Insulation Type</label>
        <picklist>
            <picklistValues>
                <fullName>cellulose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fiberglass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>foam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attic2_Insulation_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>Attic 2 Insulation Type</label>
        <picklist>
            <picklistValues>
                <fullName>cellulose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fiberglass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>foam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attic3_Insulation_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>Attic 3 Insulation Type</label>
        <picklist>
            <picklistValues>
                <fullName>cellulose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fiberglass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>foam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AtticStairTent_Points__c</fullName>
        <formula>276.75  *  AtticStairTent_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attic Stair Tent(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AtticStairTent_QTY__c</fullName>
        <label>Attic Stair Tent(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attic_Total_Area__c</fullName>
        <formula>A1A__c+A2A__c+A3A__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attic Total Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuditNotes__c</fullName>
        <label>Audit Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BathroomVent_Points__c</fullName>
        <formula>63.872  *  BathroomVent_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bathroom Vent(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BathroomVent_QTY__c</fullName>
        <label>Bathroom Vent(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blow_CFM_Reduction__c</fullName>
        <formula>( Blow_TestIn_CFM__c  -  Blow_TestOut_CFM__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BD CFM Reduction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blow_MVR__c</fullName>
        <formula>IF(AND(ISPICKVAL(Shielding__c , &quot;Well Shielded&quot;),Number_of_Floors__c==1),1.18 *  House_SF__c,IF(AND(ISPICKVAL(Shielding__c , &quot;Well Shielded&quot;),Number_of_Floors__c==2),0.95*House_SF__c,IF(AND(ISPICKVAL(Shielding__c , &quot;Well Shielded&quot;),Number_of_Floors__c&gt;=3),0.83*House_SF__c,IF(AND(ISPICKVAL(Shielding__c , &quot;Normal&quot;),Number_of_Floors__c==1),0.99*House_SF__c,IF(AND(ISPICKVAL(Shielding__c , &quot;Normal&quot;),Number_of_Floors__c==2),0.79*House_SF__c,IF(AND(ISPICKVAL(Shielding__c , &quot;Normal&quot;),Number_of_Floors__c&gt;=3),0.69*House_SF__c,IF(AND(ISPICKVAL(Shielding__c , &quot;Exposed&quot;),Number_of_Floors__c==1),0.89*House_SF__c,IF(AND(ISPICKVAL(Shielding__c , &quot;Exposed&quot;),Number_of_Floors__c==2),0.71*House_SF__c,IF(AND(ISPICKVAL(Shielding__c , &quot;Exposed&quot;),Number_of_Floors__c&gt;=3),0.62*House_SF__c,0)))))))))</formula>
        <label>MVR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blow_Reduced__c</fullName>
        <formula>Blow_CFM_Reduction__c  /  Blow_TestIn_CFM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BD % Reduced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blow_TestIn_CFM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BD Test-In CFM</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blow_TestOut_CFM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BD Test-Out CFM</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAZ_Fail_Details__c</fullName>
        <description>This is a text field.</description>
        <label>CAZ Fail Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAZ_Pass_Fail__c</fullName>
        <description>This is a picklist field.</description>
        <label>Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CODetector_Points__c</fullName>
        <formula>74.201  *  CODetector_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CO Detector(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CODetector_QTY__c</fullName>
        <label>CO Detector(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS1HTypeValue__c</fullName>
        <formula>CASE(HVAC_S1_Heating_Type__c, &quot;Central/heat pump&quot;,&apos;Central/heat pump&apos;, &quot;Central/elect resist&quot;, &apos;Central/elect resist&apos;,&quot;Central /gas&quot;,&apos;Central /gas&apos;,&quot;Electric space&quot;,&apos;Electric space&apos;,&quot;Gas space&quot;,&apos;Gas space&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckS1HeatingTypeValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CapGasWallHeater_Points__c</fullName>
        <formula>150  *  CapGasWallHeater_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cap Gas Wall Heater(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CapGasWallHeater_QTY__c</fullName>
        <label>Cap Gas Wall Heater(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CelluloseHeatPumpHeatSF_Points__c</fullName>
        <formula>0.61  *  Cellulose_HeatPumpHeatSF_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cellulose - Heat Pump Heat SF(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cellulose_ElectricHeatSF_Points__c</fullName>
        <formula>0.5  *  Cellulose_ElectricHeatSF_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cellulose - Electric Heat SF(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cellulose_ElectricHeatSF_QTY__c</fullName>
        <label>Cellulose - Electric Heat SF(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cellulose_GasHeatSF_Points__c</fullName>
        <formula>0.73  *  Cellulose_GasHeatSF_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cellulose - Gas Heat SF(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cellulose_GasHeatSF_QTY__c</fullName>
        <label>Cellulose - Gas Heat SF(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cellulose_HeatPumpHeatSF_QTY__c</fullName>
        <label>Cellulose - Heat Pump Heat SF(QTY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cellulose_NoRebateSf_Points__c</fullName>
        <formula>0.85 *  Cellulose_NoRebateSf_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cellulose - No Rebate SF(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cellulose_NoRebateSf_QTY__c</fullName>
        <label>Cellulose - No Rebate SF(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <formula>IF(OR(ISPICKVAL(HVAC_S1_Heating_Type__c,&quot;Central /gas&quot;),ISPICKVAL(HVAC_S1_Heating_Type__c,&quot;Gas space&quot;)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckPickvalue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Combustible_Appliance_Zone_Present__c</fullName>
        <label>Combustible Appliance Zone Present</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conditioned_SF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Conditioned SF</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DHW1_Water_Heater1_Age__c</fullName>
        <description>This is a picklist field.</description>
        <label>Water Heater 1 Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DHW1_Water_Heater1_Efficiency__c</fullName>
        <description>This is a picklist field.</description>
        <label>Water Heater 1 Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DHW1_Water_Heater1_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>Water Heater 1 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tankless</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DHW2_Age__c</fullName>
        <description>This is a picklist field.</description>
        <label>Water Heater 2 Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DHW2_Model__c</fullName>
        <description>This is a text field.</description>
        <label>Water Heater 2 Model #</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHW2_Water_Heater2_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>Water Heater 2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tankless</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DHW2_Water_Heater_Efficiency__c</fullName>
        <description>This is a picklist field.</description>
        <label>Water Heater 2 Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DHWPipeInsulation_Points__c</fullName>
        <formula>15.511  *  DHWPipeInsulation_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DHW Pipe Insulation(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DHWPipeInsulation_QTY__c</fullName>
        <label>DHW Pipe Insulation(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS1_Is_duct_sealing_needed__c</fullName>
        <label>DSS1 Duct Sealing Performed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSS1_Notes__c</fullName>
        <label>DSS1 Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSS1_Seal_Air_Handler_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS1 Seal Air Handler(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS1_Seal_Ducts_at_Junctions_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS1 Seal Ducts at Junctions(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS1_Seal_Ducts_at_Plenum_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS1 Seal Ducts at Plenum(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS1_Seal_Platform_Mech_Closet_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS1 Seal Platform - Mech. Closet(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS1_Seal_Plenum_Return_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS1 Seal Plenum  (Return)(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS1_Seal_Plenum_Supply_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS1 Seal Plenum (Supply)(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS1_Sealing_Return_Chase_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS1 Sealing Return Chase(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS1_Strapping_Ducts_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS1 Strapping Ducts(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS1_points__c</fullName>
        <formula>IF(ISPICKVAL(DSS1_Is_duct_sealing_needed__c , &quot;Yes&quot;),325,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSS1 Duct Sealing Performed?(Points)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS2_Notes__c</fullName>
        <label>DSS2 Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSS2_Seal_Air_Handler_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS2 Seal Air Handler(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS2_Seal_Ducts_at_Junctions_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS2 Seal Ducts at Junctions(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS2_Seal_Ducts_at_Plenum_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS2 Seal Ducts at Plenum(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS2_Seal_Platform_Mech_Closet_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS2 Seal Platform - Mech. Closet(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS2_Seal_Plenum_Return_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS2 Seal Plenum  (Return)(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS2_Seal_Plenum_Supply_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS2 Seal Plenum (Supply)(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS2_Sealing_Return_Chase_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS2 Sealing Return Chase(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS2_Strapping_Ducts_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS2 Strapping Ducts(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS2_duct_sealing_performed__c</fullName>
        <label>DSS2 Duct sealing performed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSS2_points__c</fullName>
        <formula>IF(ISPICKVAL(DSS2_duct_sealing_performed__c , &quot;Yes&quot;),325,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSS2 Duct Sealing Performed?(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>